# python-package-templates

./: README.md
allenai/: README.md
cookiecutter/: README.md
cookiecutter/TemplateDemo/: README.md  mkdocs.yml  pyproject.toml
cookiecutter/TemplateDemo/demo/: __init__.py
cookiecutter/python_boilerplate/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  pyproject.toml
cookiecutter/python_boilerplate/docs/: conf.py  installation.rst
cookiecutter/python_boilerplate/src/python_boilerplate/: __init__.py
custom/: README.md
custom/minimum/: setup.py
custom/minimum/minimum/: __init__.py
custom/sample/uv-app/: main.py  pyproject.toml
custom/sample/uv-script/: main.py
microsoft/: README.md
pyscaffold/my_project/: AUTHORS.rst  LICENSE.txt  setup.cfg
pyscaffold/my_project/docs/: conf.py
pyscaffold/my_project/src/my_project/: skeleton.py
pyscaffold/my_project/tests/: test_skeleton.py
uv/: README.md
uv/uv-init/: pyproject.toml
uv/uv-init/src/uv_init/: __init__.py
