[project]
name = "uv-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kuroki-g", email = "64629990+Kuroki-g@users.noreply.github.com" }
]
requires-python = ">=3.10.3"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
